Style: tag list page margin

--- a/tags.html
+++ b/tags.html
@@ -17,7 +17,7 @@ title: Tags
 {% endfor %}
 </ul>
 
-<div id="tag-list">
+<div class="tag-list">
   {% for tag in site.tags %}
     {% assign tagname = tag | first %}
     <div class="tag-title sticky-header" id="{{ tagname }}">
