--- a/tags.html
+++ b/tags.html
@@ -8,9 +8,9 @@ title: Tags
 
 <ul class="tag-box">
 {% for tag in site.tags %}
-  <span style="font-size: {{ tag | last | size | times: 100 | divided_by: site.tags.size | plus: 50  }}%">
+  <span style="font-size: {{ tag | last | size | times: 100 | divided_by: site.tags.size | plus: 70  }}%">
   {% assign tagname = tag | first %}
-    <a href="#{{ tagname }}">
+    <a class="all-tags" href="#{{ tagname }}">
       {{ tagname }}({{ tag | last | size }})
     </a> &nbsp;&nbsp;
   </span>
