--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,7 @@ title: Tags
 
 <h1 class="tag-page-title">Tags</h1>
 
-<ul class="tag-box">
+<ul class="tags">
 {% for tag in site.tags %}
   <span style="font-size: {{ tag | last | size | times: 100 | divided_by: site.tags.size | plus: 70  }}%">
   {% assign tagname = tag | first %}
